[tool.black]
line-length = 100

[tool.poetry]
name = "storage-layout"
version = "0.1.0"
description = "readable evm state diffs"
authors = ["banteg <banteg@pm.me>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
eth-ape = "0.4.0"
pysha3 = "1.0.2"
devtools = "0.9.0"
evm-trace = "0.1.0-alpha.7"
typer = "0.6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
storage-layout = 'storage_layout:main'
